// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Session surfaces — /help > renders in narrow width > help-narrow width 1`] = `
"[1mEstaCoda session commands[0m
• /help: Show command help
• /status: Show runtime, model, context, trust, memory, and skill status
• /model: Show or switch the active model and provider
• /switch: Switch to an existing session
• /search: Search session history
• /reset: Start a fresh session and refresh the skill/config snapshot
• /memory: Inspect promoted memory conclusions
• /tools: Browse available tools grouped by capability
• /browser: Manage local browser/CDP connection
• /skills: Browse commands and available skills
• /reload-mcp: Reload MCP config and refresh MCP tools for this session
• /resume: Show the latest interrupted-turn resume note
• /approvals: Show current one-time, session, and persistent approvals
• /revoke: Revoke a persistent approval by id
• /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
• /cron: Manage scheduled tasks
• /trust: Trust this workspace for proactive local work
• /untrust: Revoke workspace trust
• /workspace.trust.status: Show whether the current workspace is trusted
• /doctor: Run a quick in-session health check
• /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
• /handoff: Generate a handoff code to share this session with Telegram
• /clear: Clear the terminal
• /exit: End the session"
`;

exports[`Session surfaces — /help > renders in no Unicode > help-no Unicode 1`] = `
"[1mEstaCoda session commands[0m
- /help: Show command help
- /status: Show runtime, model, context, trust, memory, and skill status
- /model: Show or switch the active model and provider
- /switch: Switch to an existing session
- /search: Search session history
- /reset: Start a fresh session and refresh the skill/config snapshot
- /memory: Inspect promoted memory conclusions
- /tools: Browse available tools grouped by capability
- /browser: Manage local browser/CDP connection
- /skills: Browse commands and available skills
- /reload-mcp: Reload MCP config and refresh MCP tools for this session
- /resume: Show the latest interrupted-turn resume note
- /approvals: Show current one-time, session, and persistent approvals
- /revoke: Revoke a persistent approval by id
- /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
- /cron: Manage scheduled tasks
- /trust: Trust this workspace for proactive local work
- /untrust: Revoke workspace trust
- /workspace.trust.status: Show whether the current workspace is trusted
- /doctor: Run a quick in-session health check
- /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
- /handoff: Generate a handoff code to share this session with Telegram
- /clear: Clear the terminal
- /exit: End the session"
`;

exports[`Session surfaces — /help > renders in no color > help-no color 1`] = `
"EstaCoda session commands
• /help: Show command help
• /status: Show runtime, model, context, trust, memory, and skill status
• /model: Show or switch the active model and provider
• /switch: Switch to an existing session
• /search: Search session history
• /reset: Start a fresh session and refresh the skill/config snapshot
• /memory: Inspect promoted memory conclusions
• /tools: Browse available tools grouped by capability
• /browser: Manage local browser/CDP connection
• /skills: Browse commands and available skills
• /reload-mcp: Reload MCP config and refresh MCP tools for this session
• /resume: Show the latest interrupted-turn resume note
• /approvals: Show current one-time, session, and persistent approvals
• /revoke: Revoke a persistent approval by id
• /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
• /cron: Manage scheduled tasks
• /trust: Trust this workspace for proactive local work
• /untrust: Revoke workspace trust
• /workspace.trust.status: Show whether the current workspace is trusted
• /doctor: Run a quick in-session health check
• /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
• /handoff: Generate a handoff code to share this session with Telegram
• /clear: Clear the terminal
• /exit: End the session"
`;

exports[`Session surfaces — /help > renders in plain > help-plain 1`] = `
"EstaCoda session commands
- /help: Show command help
- /status: Show runtime, model, context, trust, memory, and skill status
- /model: Show or switch the active model and provider
- /switch: Switch to an existing session
- /search: Search session history
- /reset: Start a fresh session and refresh the skill/config snapshot
- /memory: Inspect promoted memory conclusions
- /tools: Browse available tools grouped by capability
- /browser: Manage local browser/CDP connection
- /skills: Browse commands and available skills
- /reload-mcp: Reload MCP config and refresh MCP tools for this session
- /resume: Show the latest interrupted-turn resume note
- /approvals: Show current one-time, session, and persistent approvals
- /revoke: Revoke a persistent approval by id
- /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
- /cron: Manage scheduled tasks
- /trust: Trust this workspace for proactive local work
- /untrust: Revoke workspace trust
- /workspace.trust.status: Show whether the current workspace is trusted
- /doctor: Run a quick in-session health check
- /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
- /handoff: Generate a handoff code to share this session with Telegram
- /clear: Clear the terminal
- /exit: End the session"
`;

exports[`Session surfaces — /help > renders in standard dark > help-standard dark 1`] = `
"[1mEstaCoda session commands[0m
• /help: Show command help
• /status: Show runtime, model, context, trust, memory, and skill status
• /model: Show or switch the active model and provider
• /switch: Switch to an existing session
• /search: Search session history
• /reset: Start a fresh session and refresh the skill/config snapshot
• /memory: Inspect promoted memory conclusions
• /tools: Browse available tools grouped by capability
• /browser: Manage local browser/CDP connection
• /skills: Browse commands and available skills
• /reload-mcp: Reload MCP config and refresh MCP tools for this session
• /resume: Show the latest interrupted-turn resume note
• /approvals: Show current one-time, session, and persistent approvals
• /revoke: Revoke a persistent approval by id
• /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
• /cron: Manage scheduled tasks
• /trust: Trust this workspace for proactive local work
• /untrust: Revoke workspace trust
• /workspace.trust.status: Show whether the current workspace is trusted
• /doctor: Run a quick in-session health check
• /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
• /handoff: Generate a handoff code to share this session with Telegram
• /clear: Clear the terminal
• /exit: End the session"
`;

exports[`Session surfaces — /help > renders in standard light > help-standard light 1`] = `
"[1mEstaCoda session commands[0m
• /help: Show command help
• /status: Show runtime, model, context, trust, memory, and skill status
• /model: Show or switch the active model and provider
• /switch: Switch to an existing session
• /search: Search session history
• /reset: Start a fresh session and refresh the skill/config snapshot
• /memory: Inspect promoted memory conclusions
• /tools: Browse available tools grouped by capability
• /browser: Manage local browser/CDP connection
• /skills: Browse commands and available skills
• /reload-mcp: Reload MCP config and refresh MCP tools for this session
• /resume: Show the latest interrupted-turn resume note
• /approvals: Show current one-time, session, and persistent approvals
• /revoke: Revoke a persistent approval by id
• /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
• /cron: Manage scheduled tasks
• /trust: Trust this workspace for proactive local work
• /untrust: Revoke workspace trust
• /workspace.trust.status: Show whether the current workspace is trusted
• /doctor: Run a quick in-session health check
• /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
• /handoff: Generate a handoff code to share this session with Telegram
• /clear: Clear the terminal
• /exit: End the session"
`;

exports[`Session surfaces — /help renders in narrow width: help-narrow width 1`] = `
"[1mEstaCoda session commands[0m
• /help: Show command help
• /status: Show runtime, model, context, trust, memory, and skill status
• /model: Show or switch the active model and provider
• /switch: Switch to an existing session
• /search: Search session history
• /reset: Start a fresh session and refresh the skill/config snapshot
• /memory: Inspect promoted memory conclusions
• /tools: Browse available tools grouped by capability
• /browser: Manage local browser/CDP connection
• /skills: Browse commands and available skills
• /reload-mcp: Reload MCP config and refresh MCP tools for this session
• /resume: Show the latest interrupted-turn resume note
• /approvals: Show current one-time, session, and persistent approvals
• /revoke: Revoke a persistent approval by id
• /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
• /cron: Manage scheduled tasks
• /trust: Trust this workspace for proactive local work
• /untrust: Revoke workspace trust
• /workspace.trust.status: Show whether the current workspace is trusted
• /doctor: Run a quick in-session health check
• /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
• /handoff: Generate a handoff code to share this session with Telegram
• /clear: Clear the terminal
• /exit: End the session"
`;

exports[`Session surfaces — /help renders in no Unicode: help-no Unicode 1`] = `
"[1mEstaCoda session commands[0m
- /help: Show command help
- /status: Show runtime, model, context, trust, memory, and skill status
- /model: Show or switch the active model and provider
- /switch: Switch to an existing session
- /search: Search session history
- /reset: Start a fresh session and refresh the skill/config snapshot
- /memory: Inspect promoted memory conclusions
- /tools: Browse available tools grouped by capability
- /browser: Manage local browser/CDP connection
- /skills: Browse commands and available skills
- /reload-mcp: Reload MCP config and refresh MCP tools for this session
- /resume: Show the latest interrupted-turn resume note
- /approvals: Show current one-time, session, and persistent approvals
- /revoke: Revoke a persistent approval by id
- /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
- /cron: Manage scheduled tasks
- /trust: Trust this workspace for proactive local work
- /untrust: Revoke workspace trust
- /workspace.trust.status: Show whether the current workspace is trusted
- /doctor: Run a quick in-session health check
- /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
- /handoff: Generate a handoff code to share this session with Telegram
- /clear: Clear the terminal
- /exit: End the session"
`;

exports[`Session surfaces — /help renders in no color: help-no color 1`] = `
"EstaCoda session commands
• /help: Show command help
• /status: Show runtime, model, context, trust, memory, and skill status
• /model: Show or switch the active model and provider
• /switch: Switch to an existing session
• /search: Search session history
• /reset: Start a fresh session and refresh the skill/config snapshot
• /memory: Inspect promoted memory conclusions
• /tools: Browse available tools grouped by capability
• /browser: Manage local browser/CDP connection
• /skills: Browse commands and available skills
• /reload-mcp: Reload MCP config and refresh MCP tools for this session
• /resume: Show the latest interrupted-turn resume note
• /approvals: Show current one-time, session, and persistent approvals
• /revoke: Revoke a persistent approval by id
• /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
• /cron: Manage scheduled tasks
• /trust: Trust this workspace for proactive local work
• /untrust: Revoke workspace trust
• /workspace.trust.status: Show whether the current workspace is trusted
• /doctor: Run a quick in-session health check
• /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
• /handoff: Generate a handoff code to share this session with Telegram
• /clear: Clear the terminal
• /exit: End the session"
`;

exports[`Session surfaces — /help renders in plain: help-plain 1`] = `
"EstaCoda session commands
- /help: Show command help
- /status: Show runtime, model, context, trust, memory, and skill status
- /model: Show or switch the active model and provider
- /switch: Switch to an existing session
- /search: Search session history
- /reset: Start a fresh session and refresh the skill/config snapshot
- /memory: Inspect promoted memory conclusions
- /tools: Browse available tools grouped by capability
- /browser: Manage local browser/CDP connection
- /skills: Browse commands and available skills
- /reload-mcp: Reload MCP config and refresh MCP tools for this session
- /resume: Show the latest interrupted-turn resume note
- /approvals: Show current one-time, session, and persistent approvals
- /revoke: Revoke a persistent approval by id
- /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
- /cron: Manage scheduled tasks
- /trust: Trust this workspace for proactive local work
- /untrust: Revoke workspace trust
- /workspace.trust.status: Show whether the current workspace is trusted
- /doctor: Run a quick in-session health check
- /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
- /handoff: Generate a handoff code to share this session with Telegram
- /clear: Clear the terminal
- /exit: End the session"
`;

exports[`Session surfaces — /help renders in standard dark: help-standard dark 1`] = `
"[1mEstaCoda session commands[0m
• /help: Show command help
• /status: Show runtime, model, context, trust, memory, and skill status
• /model: Show or switch the active model and provider
• /switch: Switch to an existing session
• /search: Search session history
• /reset: Start a fresh session and refresh the skill/config snapshot
• /memory: Inspect promoted memory conclusions
• /tools: Browse available tools grouped by capability
• /browser: Manage local browser/CDP connection
• /skills: Browse commands and available skills
• /reload-mcp: Reload MCP config and refresh MCP tools for this session
• /resume: Show the latest interrupted-turn resume note
• /approvals: Show current one-time, session, and persistent approvals
• /revoke: Revoke a persistent approval by id
• /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
• /cron: Manage scheduled tasks
• /trust: Trust this workspace for proactive local work
• /untrust: Revoke workspace trust
• /workspace.trust.status: Show whether the current workspace is trusted
• /doctor: Run a quick in-session health check
• /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
• /handoff: Generate a handoff code to share this session with Telegram
• /clear: Clear the terminal
• /exit: End the session"
`;

exports[`Session surfaces — /help renders in standard light: help-standard light 1`] = `
"[1mEstaCoda session commands[0m
• /help: Show command help
• /status: Show runtime, model, context, trust, memory, and skill status
• /model: Show or switch the active model and provider
• /switch: Switch to an existing session
• /search: Search session history
• /reset: Start a fresh session and refresh the skill/config snapshot
• /memory: Inspect promoted memory conclusions
• /tools: Browse available tools grouped by capability
• /browser: Manage local browser/CDP connection
• /skills: Browse commands and available skills
• /reload-mcp: Reload MCP config and refresh MCP tools for this session
• /resume: Show the latest interrupted-turn resume note
• /approvals: Show current one-time, session, and persistent approvals
• /revoke: Revoke a persistent approval by id
• /yolo: Toggle session YOLO/open mode; hard safety blocks still apply
• /cron: Manage scheduled tasks
• /trust: Trust this workspace for proactive local work
• /untrust: Revoke workspace trust
• /workspace.trust.status: Show whether the current workspace is trusted
• /doctor: Run a quick in-session health check
• /flow: TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
• /handoff: Generate a handoff code to share this session with Telegram
• /clear: Clear the terminal
• /exit: End the session"
`;

exports[`Session surfaces — /model > renders in narrow width > model-narrow width 1`] = `
"[1mModel[0m
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model > renders in no Unicode > model-no Unicode 1`] = `
"[1mModel[0m
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model > renders in no color > model-no color 1`] = `
"Model
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model > renders in plain > model-plain 1`] = `
"Model
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model > renders in standard dark > model-standard dark 1`] = `
"[1mModel[0m
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model > renders in standard light > model-standard light 1`] = `
"[1mModel[0m
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model renders in narrow width: model-narrow width 1`] = `
"[1mModel[0m
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model renders in no Unicode: model-no Unicode 1`] = `
"[1mModel[0m
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model renders in no color: model-no color 1`] = `
"Model
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model renders in plain: model-plain 1`] = `
"Model
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model renders in standard dark: model-standard dark 1`] = `
"[1mModel[0m
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /model renders in standard light: model-standard light 1`] = `
"[1mModel[0m
provider: unconfigured
model: smoke-model
context window: unknown
security mode: adaptive"
`;

exports[`Session surfaces — /status > renders in narrow width > status-narrow width 1`] = `
"[38;2;90;172;255mEstaCoda is ready[0m
│ model: [2munconfigured/smoke-model[0m
│ security: [38;2;76;175;80madaptive[0m
│ skills: 3 (suggest)
│ tools: 12
│ mcp: 1/2
│ taskflow: [2minactive[0m"
`;

exports[`Session surfaces — /status > renders in no Unicode > status-no Unicode 1`] = `
"[38;2;90;172;255mEstaCoda is ready[0m
| model: [2munconfigured/smoke-model[0m
| security: [38;2;76;175;80madaptive[0m
| skills: 3 (suggest)
| tools: 12
| mcp: 1/2
| taskflow: [2minactive[0m"
`;

exports[`Session surfaces — /status > renders in no color > status-no color 1`] = `
"EstaCoda is ready
│ model: unconfigured/smoke-model
│ security: adaptive
│ skills: 3 (suggest)
│ tools: 12
│ mcp: 1/2
│ taskflow: inactive"
`;

exports[`Session surfaces — /status > renders in plain > status-plain 1`] = `
"EstaCoda is ready
model: unconfigured/smoke-model
security: adaptive
skills: 3 (suggest)
tools: 12
mcp: 1/2
taskflow: inactive"
`;

exports[`Session surfaces — /status > renders in standard dark > status-standard dark 1`] = `
"[38;2;90;172;255mEstaCoda is ready[0m
│ model: [2munconfigured/smoke-model[0m
│ security: [38;2;76;175;80madaptive[0m
│ skills: 3 (suggest)
│ tools: 12
│ mcp: 1/2
│ taskflow: [2minactive[0m"
`;

exports[`Session surfaces — /status > renders in standard light > status-standard light 1`] = `
"[38;2;0;87;217mEstaCoda is ready[0m
│ model: [2munconfigured/smoke-model[0m
│ security: [38;2;46;125;50madaptive[0m
│ skills: 3 (suggest)
│ tools: 12
│ mcp: 1/2
│ taskflow: [2minactive[0m"
`;

exports[`Session surfaces — /status renders in narrow width: status-narrow width 1`] = `
"[38;2;90;172;255mEstaCoda is ready[0m
│ model: [2munconfigured/smoke-model[0m
│ security: [38;2;76;175;80madaptive[0m
│ skills: 3 (suggest)
│ tools: 12
│ mcp: 1/2
│ taskflow: [2minactive[0m"
`;

exports[`Session surfaces — /status renders in no Unicode: status-no Unicode 1`] = `
"[38;2;90;172;255mEstaCoda is ready[0m
| model: [2munconfigured/smoke-model[0m
| security: [38;2;76;175;80madaptive[0m
| skills: 3 (suggest)
| tools: 12
| mcp: 1/2
| taskflow: [2minactive[0m"
`;

exports[`Session surfaces — /status renders in no color: status-no color 1`] = `
"EstaCoda is ready
│ model: unconfigured/smoke-model
│ security: adaptive
│ skills: 3 (suggest)
│ tools: 12
│ mcp: 1/2
│ taskflow: inactive"
`;

exports[`Session surfaces — /status renders in plain: status-plain 1`] = `
"EstaCoda is ready
model: unconfigured/smoke-model
security: adaptive
skills: 3 (suggest)
tools: 12
mcp: 1/2
taskflow: inactive"
`;

exports[`Session surfaces — /status renders in standard dark: status-standard dark 1`] = `
"[38;2;90;172;255mEstaCoda is ready[0m
│ model: [2munconfigured/smoke-model[0m
│ security: [38;2;76;175;80madaptive[0m
│ skills: 3 (suggest)
│ tools: 12
│ mcp: 1/2
│ taskflow: [2minactive[0m"
`;

exports[`Session surfaces — /status renders in standard light: status-standard light 1`] = `
"[38;2;0;87;217mEstaCoda is ready[0m
│ model: [2munconfigured/smoke-model[0m
│ security: [38;2;46;125;50madaptive[0m
│ skills: 3 (suggest)
│ tools: 12
│ mcp: 1/2
│ taskflow: [2minactive[0m"
`;

exports[`Session surfaces — /tools > renders in narrow width > tools-narrow width 1`] = `"• No tools match ""."`;

exports[`Session surfaces — /tools > renders in no Unicode > tools-no Unicode 1`] = `"- No tools match ""."`;

exports[`Session surfaces — /tools > renders in no color > tools-no color 1`] = `"• No tools match ""."`;

exports[`Session surfaces — /tools > renders in plain > tools-plain 1`] = `"- No tools match ""."`;

exports[`Session surfaces — /tools > renders in standard dark > tools-standard dark 1`] = `"• No tools match ""."`;

exports[`Session surfaces — /tools > renders in standard light > tools-standard light 1`] = `"• No tools match ""."`;

exports[`Session surfaces — /tools renders in narrow width: tools-narrow width 1`] = `"• No tools match ""."`;

exports[`Session surfaces — /tools renders in no Unicode: tools-no Unicode 1`] = `"- No tools match ""."`;

exports[`Session surfaces — /tools renders in no color: tools-no color 1`] = `"• No tools match ""."`;

exports[`Session surfaces — /tools renders in plain: tools-plain 1`] = `"- No tools match ""."`;

exports[`Session surfaces — /tools renders in standard dark: tools-standard dark 1`] = `"• No tools match ""."`;

exports[`Session surfaces — /tools renders in standard light: tools-standard light 1`] = `"• No tools match ""."`;

exports[`Session surfaces — slash menu > renders in narrow width > slash-menu-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1m[0m

[1mCommands[0m
[38;2;90;172;255mName                   [0m  [38;2;90;172;255mDescription                                                           [0m
[2m───────────────────────  ──────────────────────────────────────────────────────────────────────[0m
/help                    Show command help                                                     
/status                  Show runtime, model, context, trust, memory, and skill status         
/model                   Show or switch the active model and provider                          
/switch                  Switch to an existing session                                         
/search                  Search session history                                                
/reset                   Start a fresh session and refresh the skill/config snapshot           
/memory                  Inspect promoted memory conclusions                                   
/tools                   Browse available tools grouped by capability                          
/browser                 Manage local browser/CDP connection                                   
/skills                  Browse commands and available skills                                  
/reload-mcp              Reload MCP config and refresh MCP tools for this session              
/resume                  Show the latest interrupted-turn resume note                          
/approvals               Show current one-time, session, and persistent approvals              
/revoke                  Revoke a persistent approval by id                                    
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply         
/cron                    Manage scheduled tasks                                                
/trust                   Trust this workspace for proactive local work                         
/untrust                 Revoke workspace trust                                                
/workspace.trust.status  Show whether the current workspace is trusted                         
/doctor                  Run a quick in-session health check                                   
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram           
/clear                   Clear the terminal                                                    
/exit                    End the session                                                       "
`;

exports[`Session surfaces — slash menu > renders in no Unicode > slash-menu-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1m[0m

[1mCommands[0m
[38;2;90;172;255mName                   [0m  [38;2;90;172;255mDescription                                                           [0m
[2m-----------------------  ----------------------------------------------------------------------[0m
/help                    Show command help                                                     
/status                  Show runtime, model, context, trust, memory, and skill status         
/model                   Show or switch the active model and provider                          
/switch                  Switch to an existing session                                         
/search                  Search session history                                                
/reset                   Start a fresh session and refresh the skill/config snapshot           
/memory                  Inspect promoted memory conclusions                                   
/tools                   Browse available tools grouped by capability                          
/browser                 Manage local browser/CDP connection                                   
/skills                  Browse commands and available skills                                  
/reload-mcp              Reload MCP config and refresh MCP tools for this session              
/resume                  Show the latest interrupted-turn resume note                          
/approvals               Show current one-time, session, and persistent approvals              
/revoke                  Revoke a persistent approval by id                                    
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply         
/cron                    Manage scheduled tasks                                                
/trust                   Trust this workspace for proactive local work                         
/untrust                 Revoke workspace trust                                                
/workspace.trust.status  Show whether the current workspace is trusted                         
/doctor                  Run a quick in-session health check                                   
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram           
/clear                   Clear the terminal                                                    
/exit                    End the session                                                       "
`;

exports[`Session surfaces — slash menu > renders in no color > slash-menu-no color 1`] = `
"[OK] 

Commands
Name                     Description                                                           
───────────────────────  ──────────────────────────────────────────────────────────────────────
/help                    Show command help                                                     
/status                  Show runtime, model, context, trust, memory, and skill status         
/model                   Show or switch the active model and provider                          
/switch                  Switch to an existing session                                         
/search                  Search session history                                                
/reset                   Start a fresh session and refresh the skill/config snapshot           
/memory                  Inspect promoted memory conclusions                                   
/tools                   Browse available tools grouped by capability                          
/browser                 Manage local browser/CDP connection                                   
/skills                  Browse commands and available skills                                  
/reload-mcp              Reload MCP config and refresh MCP tools for this session              
/resume                  Show the latest interrupted-turn resume note                          
/approvals               Show current one-time, session, and persistent approvals              
/revoke                  Revoke a persistent approval by id                                    
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply         
/cron                    Manage scheduled tasks                                                
/trust                   Trust this workspace for proactive local work                         
/untrust                 Revoke workspace trust                                                
/workspace.trust.status  Show whether the current workspace is trusted                         
/doctor                  Run a quick in-session health check                                   
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram           
/clear                   Clear the terminal                                                    
/exit                    End the session                                                       "
`;

exports[`Session surfaces — slash menu > renders in plain > slash-menu-plain 1`] = `
"[OK] 

Commands
Name                     Description                                                           
-----------------------  ----------------------------------------------------------------------
/help                    Show command help                                                     
/status                  Show runtime, model, context, trust, memory, and skill status         
/model                   Show or switch the active model and provider                          
/switch                  Switch to an existing session                                         
/search                  Search session history                                                
/reset                   Start a fresh session and refresh the skill/config snapshot           
/memory                  Inspect promoted memory conclusions                                   
/tools                   Browse available tools grouped by capability                          
/browser                 Manage local browser/CDP connection                                   
/skills                  Browse commands and available skills                                  
/reload-mcp              Reload MCP config and refresh MCP tools for this session              
/resume                  Show the latest interrupted-turn resume note                          
/approvals               Show current one-time, session, and persistent approvals              
/revoke                  Revoke a persistent approval by id                                    
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply         
/cron                    Manage scheduled tasks                                                
/trust                   Trust this workspace for proactive local work                         
/untrust                 Revoke workspace trust                                                
/workspace.trust.status  Show whether the current workspace is trusted                         
/doctor                  Run a quick in-session health check                                   
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram           
/clear                   Clear the terminal                                                    
/exit                    End the session                                                       "
`;

exports[`Session surfaces — slash menu > renders in standard dark > slash-menu-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1m[0m

[1mCommands[0m
[38;2;90;172;255mName                   [0m  [38;2;90;172;255mDescription                                                           [0m
[2m───────────────────────  ──────────────────────────────────────────────────────────────────────[0m
/help                    Show command help                                                     
/status                  Show runtime, model, context, trust, memory, and skill status         
/model                   Show or switch the active model and provider                          
/switch                  Switch to an existing session                                         
/search                  Search session history                                                
/reset                   Start a fresh session and refresh the skill/config snapshot           
/memory                  Inspect promoted memory conclusions                                   
/tools                   Browse available tools grouped by capability                          
/browser                 Manage local browser/CDP connection                                   
/skills                  Browse commands and available skills                                  
/reload-mcp              Reload MCP config and refresh MCP tools for this session              
/resume                  Show the latest interrupted-turn resume note                          
/approvals               Show current one-time, session, and persistent approvals              
/revoke                  Revoke a persistent approval by id                                    
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply         
/cron                    Manage scheduled tasks                                                
/trust                   Trust this workspace for proactive local work                         
/untrust                 Revoke workspace trust                                                
/workspace.trust.status  Show whether the current workspace is trusted                         
/doctor                  Run a quick in-session health check                                   
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram           
/clear                   Clear the terminal                                                    
/exit                    End the session                                                       "
`;

exports[`Session surfaces — slash menu > renders in standard light > slash-menu-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1m[0m

[1mCommands[0m
[38;2;0;87;217mName                   [0m  [38;2;0;87;217mDescription                                                           [0m
[2m───────────────────────  ──────────────────────────────────────────────────────────────────────[0m
/help                    Show command help                                                     
/status                  Show runtime, model, context, trust, memory, and skill status         
/model                   Show or switch the active model and provider                          
/switch                  Switch to an existing session                                         
/search                  Search session history                                                
/reset                   Start a fresh session and refresh the skill/config snapshot           
/memory                  Inspect promoted memory conclusions                                   
/tools                   Browse available tools grouped by capability                          
/browser                 Manage local browser/CDP connection                                   
/skills                  Browse commands and available skills                                  
/reload-mcp              Reload MCP config and refresh MCP tools for this session              
/resume                  Show the latest interrupted-turn resume note                          
/approvals               Show current one-time, session, and persistent approvals              
/revoke                  Revoke a persistent approval by id                                    
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply         
/cron                    Manage scheduled tasks                                                
/trust                   Trust this workspace for proactive local work                         
/untrust                 Revoke workspace trust                                                
/workspace.trust.status  Show whether the current workspace is trusted                         
/doctor                  Run a quick in-session health check                                   
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram           
/clear                   Clear the terminal                                                    
/exit                    End the session                                                       "
`;

exports[`Session surfaces — slash menu renders in narrow width: slash-menu-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1m[0m

[1mCommands[0m
[38;2;90;172;255mName                   [0m  [38;2;90;172;255mDescription                                                           [0m
[2m───────────────────────  ──────────────────────────────────────────────────────────────────────[0m
/help                    Show command help                                                     
/status                  Show runtime, model, context, trust, memory, and skill status         
/model                   Show or switch the active model and provider                          
/switch                  Switch to an existing session                                         
/search                  Search session history                                                
/reset                   Start a fresh session and refresh the skill/config snapshot           
/memory                  Inspect promoted memory conclusions                                   
/tools                   Browse available tools grouped by capability                          
/browser                 Manage local browser/CDP connection                                   
/skills                  Browse commands and available skills                                  
/reload-mcp              Reload MCP config and refresh MCP tools for this session              
/resume                  Show the latest interrupted-turn resume note                          
/approvals               Show current one-time, session, and persistent approvals              
/revoke                  Revoke a persistent approval by id                                    
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply         
/cron                    Manage scheduled tasks                                                
/trust                   Trust this workspace for proactive local work                         
/untrust                 Revoke workspace trust                                                
/workspace.trust.status  Show whether the current workspace is trusted                         
/doctor                  Run a quick in-session health check                                   
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram           
/clear                   Clear the terminal                                                    
/exit                    End the session                                                       "
`;

exports[`Session surfaces — slash menu renders in no Unicode: slash-menu-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1m[0m

[1mCommands[0m
[38;2;90;172;255mName                   [0m  [38;2;90;172;255mDescription                                                           [0m
[2m-----------------------  ----------------------------------------------------------------------[0m
/help                    Show command help                                                     
/status                  Show runtime, model, context, trust, memory, and skill status         
/model                   Show or switch the active model and provider                          
/switch                  Switch to an existing session                                         
/search                  Search session history                                                
/reset                   Start a fresh session and refresh the skill/config snapshot           
/memory                  Inspect promoted memory conclusions                                   
/tools                   Browse available tools grouped by capability                          
/browser                 Manage local browser/CDP connection                                   
/skills                  Browse commands and available skills                                  
/reload-mcp              Reload MCP config and refresh MCP tools for this session              
/resume                  Show the latest interrupted-turn resume note                          
/approvals               Show current one-time, session, and persistent approvals              
/revoke                  Revoke a persistent approval by id                                    
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply         
/cron                    Manage scheduled tasks                                                
/trust                   Trust this workspace for proactive local work                         
/untrust                 Revoke workspace trust                                                
/workspace.trust.status  Show whether the current workspace is trusted                         
/doctor                  Run a quick in-session health check                                   
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram           
/clear                   Clear the terminal                                                    
/exit                    End the session                                                       "
`;

exports[`Session surfaces — slash menu renders in no color: slash-menu-no color 1`] = `
"[OK] 

Commands
Name                     Description                                                           
───────────────────────  ──────────────────────────────────────────────────────────────────────
/help                    Show command help                                                     
/status                  Show runtime, model, context, trust, memory, and skill status         
/model                   Show or switch the active model and provider                          
/switch                  Switch to an existing session                                         
/search                  Search session history                                                
/reset                   Start a fresh session and refresh the skill/config snapshot           
/memory                  Inspect promoted memory conclusions                                   
/tools                   Browse available tools grouped by capability                          
/browser                 Manage local browser/CDP connection                                   
/skills                  Browse commands and available skills                                  
/reload-mcp              Reload MCP config and refresh MCP tools for this session              
/resume                  Show the latest interrupted-turn resume note                          
/approvals               Show current one-time, session, and persistent approvals              
/revoke                  Revoke a persistent approval by id                                    
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply         
/cron                    Manage scheduled tasks                                                
/trust                   Trust this workspace for proactive local work                         
/untrust                 Revoke workspace trust                                                
/workspace.trust.status  Show whether the current workspace is trusted                         
/doctor                  Run a quick in-session health check                                   
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram           
/clear                   Clear the terminal                                                    
/exit                    End the session                                                       "
`;

exports[`Session surfaces — slash menu renders in plain: slash-menu-plain 1`] = `
"[OK] 

Commands
Name                     Description                                                           
-----------------------  ----------------------------------------------------------------------
/help                    Show command help                                                     
/status                  Show runtime, model, context, trust, memory, and skill status         
/model                   Show or switch the active model and provider                          
/switch                  Switch to an existing session                                         
/search                  Search session history                                                
/reset                   Start a fresh session and refresh the skill/config snapshot           
/memory                  Inspect promoted memory conclusions                                   
/tools                   Browse available tools grouped by capability                          
/browser                 Manage local browser/CDP connection                                   
/skills                  Browse commands and available skills                                  
/reload-mcp              Reload MCP config and refresh MCP tools for this session              
/resume                  Show the latest interrupted-turn resume note                          
/approvals               Show current one-time, session, and persistent approvals              
/revoke                  Revoke a persistent approval by id                                    
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply         
/cron                    Manage scheduled tasks                                                
/trust                   Trust this workspace for proactive local work                         
/untrust                 Revoke workspace trust                                                
/workspace.trust.status  Show whether the current workspace is trusted                         
/doctor                  Run a quick in-session health check                                   
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram           
/clear                   Clear the terminal                                                    
/exit                    End the session                                                       "
`;

exports[`Session surfaces — slash menu renders in standard dark: slash-menu-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1m[0m

[1mCommands[0m
[38;2;90;172;255mName                   [0m  [38;2;90;172;255mDescription                                                           [0m
[2m───────────────────────  ──────────────────────────────────────────────────────────────────────[0m
/help                    Show command help                                                     
/status                  Show runtime, model, context, trust, memory, and skill status         
/model                   Show or switch the active model and provider                          
/switch                  Switch to an existing session                                         
/search                  Search session history                                                
/reset                   Start a fresh session and refresh the skill/config snapshot           
/memory                  Inspect promoted memory conclusions                                   
/tools                   Browse available tools grouped by capability                          
/browser                 Manage local browser/CDP connection                                   
/skills                  Browse commands and available skills                                  
/reload-mcp              Reload MCP config and refresh MCP tools for this session              
/resume                  Show the latest interrupted-turn resume note                          
/approvals               Show current one-time, session, and persistent approvals              
/revoke                  Revoke a persistent approval by id                                    
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply         
/cron                    Manage scheduled tasks                                                
/trust                   Trust this workspace for proactive local work                         
/untrust                 Revoke workspace trust                                                
/workspace.trust.status  Show whether the current workspace is trusted                         
/doctor                  Run a quick in-session health check                                   
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram           
/clear                   Clear the terminal                                                    
/exit                    End the session                                                       "
`;

exports[`Session surfaces — slash menu renders in standard light: slash-menu-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1m[0m

[1mCommands[0m
[38;2;0;87;217mName                   [0m  [38;2;0;87;217mDescription                                                           [0m
[2m───────────────────────  ──────────────────────────────────────────────────────────────────────[0m
/help                    Show command help                                                     
/status                  Show runtime, model, context, trust, memory, and skill status         
/model                   Show or switch the active model and provider                          
/switch                  Switch to an existing session                                         
/search                  Search session history                                                
/reset                   Start a fresh session and refresh the skill/config snapshot           
/memory                  Inspect promoted memory conclusions                                   
/tools                   Browse available tools grouped by capability                          
/browser                 Manage local browser/CDP connection                                   
/skills                  Browse commands and available skills                                  
/reload-mcp              Reload MCP config and refresh MCP tools for this session              
/resume                  Show the latest interrupted-turn resume note                          
/approvals               Show current one-time, session, and persistent approvals              
/revoke                  Revoke a persistent approval by id                                    
/yolo                    Toggle session YOLO/open mode; hard safety blocks still apply         
/cron                    Manage scheduled tasks                                                
/trust                   Trust this workspace for proactive local work                         
/untrust                 Revoke workspace trust                                                
/workspace.trust.status  Show whether the current workspace is trusted                         
/doctor                  Run a quick in-session health check                                   
/flow                    TaskFlow operator commands (status, pause, resume, steer, trace, etc.)
/handoff                 Generate a handoff code to share this session with Telegram           
/clear                   Clear the terminal                                                    
/exit                    End the session                                                       "
`;

exports[`Session surfaces — unknown-command fallback > renders in narrow width > unknown-command-narrow width 1`] = `"• No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback > renders in no Unicode > unknown-command-no Unicode 1`] = `"- No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback > renders in no color > unknown-command-no color 1`] = `"• No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback > renders in plain > unknown-command-plain 1`] = `"- No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback > renders in standard dark > unknown-command-standard dark 1`] = `"• No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback > renders in standard light > unknown-command-standard light 1`] = `"• No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback renders in narrow width: unknown-command-narrow width 1`] = `"• No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback renders in no Unicode: unknown-command-no Unicode 1`] = `"- No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback renders in no color: unknown-command-no color 1`] = `"• No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback renders in plain: unknown-command-plain 1`] = `"- No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback renders in standard dark: unknown-command-standard dark 1`] = `"• No slash commands or skills match "/nonexistent"."`;

exports[`Session surfaces — unknown-command fallback renders in standard light: unknown-command-standard light 1`] = `"• No slash commands or skills match "/nonexistent"."`;
